@@ -2,6 +2,10 @@
 version: 0.02_1
 date:    XXX
 changes:
+- reduce() now supports chaining comparison operators
+- reduce() now DWIMs when passed zero- or single-element lists
+- zip() and cross() now prohibit an opstring argument and always use 'infix:,'
+- zipwith() and crosswith() now require an opstring argument
 ---
 version: 0.02
 date:    Tue Feb 15 04:13:48 EST 2011
